#33544 Added styling / validation / submit / popup control in Quick Pricing Edit Tool (My Inventory).

--- a/localization/en.json
+++ b/localization/en.json
@@ -672,6 +672,7 @@
   "global.selectAdditionalHomeBranch": "Select Additional Home Branch",
   "global.tags": "Tags",
   "global.buy": "Buy",
+  "global.price": "Price",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -870,12 +871,14 @@
   "myInventory.form": "Form",
   "myInventory.assay": "Assay",
   "myInventory.mfgDate": "MFR Date",
-  "myInventory.expDate": "EXP Date",
+  "myInventory.expDate": "Lot Exp. Date",
   "myInventory.allocatedPkg": "Allocated PKG",
-  "myInventory.offerExpiration": "Expiration Date",
+  "myInventory.offerExpiration": "Offer Exp. Date",
   "myInventory.groupId": "Group ID",
   "myInventory.lotNumber": "Lot Number",
   "myInventory.searchByProductName": "Search by product name...",
+  "myInventory.editPricing": "Edit Pricing",
+  "myInventory.andAbove": "and above",
   "filter.warehouse": "Warehouse",
   "filter.incomplete": "Incomplete",
   "filter.chemicalProductName": "Chemical / Product Name",
