Checkout page redesign

--- a/localization/en.json
+++ b/localization/en.json
@@ -210,6 +210,8 @@
   "casProduct.internationalAICS": "AICS",
   "casProduct.internationalIECSC": "IECSC",
   "casProduct.internationalKECL": "KECL",
+  "global.placeholder.taxId": "Enter Tax ID",
+  "global.placeholder.deliveryNotes": "Write delivery notes here...",
   "global.from": "From",
   "global.associations": "Associations",
   "global.discard": "Discard",
@@ -1239,10 +1241,15 @@
   "namesSynonyms.synonyms": "Synonyms",
   "operators": "Operators",
   "operators.login": "Login",
+  "checkout.contactInfo": "Contact Info",
+  "checkout.addNewAddress": "Add New Address",
+  "checkout.editAddress": "Edit Address",
+  "cart.externalNotes": "External Notes",
   "cart.shippingQuoteId": "Shipping Quote ID",
   "cart.summary": "SUMMARY",
   "cart.totalItems": "TOTAL ITEMS: {count}",
-  "cart.weightLimitExceeded": "Your order weight exceeds weight limit {limit} for automatic shipping quotes. Your shipping quote needs to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
+  "cart.weightLimitExceeded.header" : "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
+  "cart.weightLimitExceeded.content": "Your order weight exceeds weight limit {limit} for automatic shipping quotes. Your shipping quote needs to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
   "cart.selectWhOrAddress": "Please, select delivery address or warehouse first.",
   "cart.quoteReceived": "If you already received the shipping quote and agree, please type in the provide Shipping Quote Id and continue with Checkout.",
   "cart.requestShippingQuote": "Request Shipping Quote",
