--- a/localization/en.json
+++ b/localization/en.json
@@ -2200,5 +2200,7 @@
   "wantedBoard.submitOfferHeader": "SUBMIT OFFER",
   "wantedBoard.requestedBy": "Requested By",
   "wantedBoard.notify.noInventoryItems.Header": "No Items Match",
+  "addDocuments.existingDocuments": "Existing Documents",
+  "addDocuments.addDocuments": "ADD DOCUMENTS",
   "wantedBoard.notify.noInventoryItems.Content": "You do not have any Inventory item matching the requested item to offer."
 }
