Task #33521 - modifications for take-over info bar

--- a/localization/en.json
+++ b/localization/en.json
@@ -370,6 +370,7 @@
   "global.supportChat": "Support Chat",
   "global.close": "Close",
   "global.done": "Done",
+  "global.takeOverInfo": "You are working in take-over mode on behalf of '{companyName}'.",
   "global.returnToAdmin": "Return to Admin",
   "global.termsOfService": "Terms of Service",
   "global.logout": "Logout",
