Checkout own freight support

--- a/localization/en.json
+++ b/localization/en.json
@@ -1248,6 +1248,9 @@
   "checkout.contactInfo": "Contact Info",
   "checkout.addNewAddress": "Add New Address",
   "checkout.editAddress": "Edit Address",
+  "cart.useOwnFreight": "Use my own freight",
+  "cart.usingOwnFreight": "You are using your own freight",
+  "cart.ownFreight": "Own Freight",
   "cart.externalNotes": "External Notes",
   "cart.shippingQuoteId": "Shipping Quote ID",
   "cart.summary": "SUMMARY",
