#33594 Added product filtering in datagrid in Operations / Company Product Catalog. Fixed Settings / Documents filtering.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1635,6 +1635,8 @@
   "operations.tables.shippingQuotes.search": "Search shipping quote by TBD",
   "operations.tables.tags.search": "Search tags",
   "operations.tables.companyProductCatalog.search": "Search product catalog by name, number ...",
+  "operations.tables.companyProductCatalog.SearchCompanyText": "Search product catalog by company",
+  "operations.tables.companyProductCatalog.MappedText": "Select mapped/unmapped only",
   "operations.tables.companyInventory.search": "Search product inventory by name, number ...",
   "operations.addShippingQuote": "Add Shipping Quote",
   "operations.editShippingQuote": "Edit Shipping Quote",
@@ -1652,6 +1654,8 @@
   "operations.productInternalCode": "Product Internal Code",
   "operations.owner": "Owner",
   "operations.mapped": "Mapped",
+  "operations.unmapped": "Unmapped Only",
+  "operations.noSelection": "All",
   "operations.productOffersCnt": "Product Offers #",
   "operations.productName": "Product Name",
   "operations.productCode": "Product Code",
