--- a/localization/en.json
+++ b/localization/en.json
@@ -1255,7 +1255,7 @@
   "cart.shippingQuoteId": "Shipping Quote ID",
   "cart.summary": "SUMMARY",
   "cart.totalItems": "TOTAL ITEMS: {count}",
-  "cart.weightLimitExceeded.header" : "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
+  "cart.weightLimitExceeded.header": "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
   "cart.weightLimitExceeded.content": "Your order weight exceeds weight limit {limit} for automatic shipping quotes. Your shipping quote needs to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
   "cart.selectWhOrAddress": "Please, select delivery address or warehouse first.",
   "cart.quoteReceived": "If you already received the shipping quote and agree, please type in the provide Shipping Quote Id and continue with Checkout.",
@@ -2221,5 +2221,6 @@
   "wantedBoard.notify.noInventoryItems.Header": "No Items Match",
   "addDocuments.existingDocuments": "Existing Documents",
   "addDocuments.addDocuments": "ADD DOCUMENTS",
-  "wantedBoard.notify.noInventoryItems.Content": "You do not have any Inventory item matching the requested item to offer."
+  "wantedBoard.notify.noInventoryItems.Content": "You do not have any Inventory item matching the requested item to offer.",
+  "global.selectTags": "Select tags"
 }
