--- a/localization/en.json
+++ b/localization/en.json
@@ -124,6 +124,8 @@
   "navigation.operations": "Operations",
   "navigation.shippingQuotes": "Shipping Quotes",
   "navigation.tags": "Tags",
+  "navigation.company-product-catalog": "Company Product Catalog",
+  "navigation.company-inventory": "Company Inventory",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
   "dwolla.paymentPoweredBy": "Echo Global Chemical Exchange payment gateway is powered by:",
   "dwolla.confirmAcc": "Confirm Account Administrator Information",
@@ -401,6 +403,7 @@
   "global.user": "User",
   "global.pricePer": "Price per {unit}",
   "global.remove": "Remove",
+  "global.view": "View",
   "global.viewEdit": "View/Edit",
   "global.selectLocation": "Select Location",
   "global.cancel": "Cancel",
@@ -1648,6 +1651,7 @@
   "operations.tables.companyProductCatalog.SearchCompanyText": "Search product catalog by company",
   "operations.tables.companyProductCatalog.MappedText": "Select mapped/unmapped only",
   "operations.tables.companyInventory.search": "Search product inventory by name, number ...",
+  "operations.tables.orders.search": "Search orders by company",
   "operations.addShippingQuote": "Add Shipping Quote",
   "operations.editShippingQuote": "Edit Shipping Quote",
   "operations.carrierName": "Carrier Name",
@@ -2069,6 +2073,7 @@
   "order.requestCredit.atLeastReasonOrReasonText": "Reason has to be selected or write reason message.",
   "order.requestCreditSend": "Request credit was successfully sent",
   "order.relatedDocuments": "RELATED DOCUMENTS",
+  "order.relatedDocumentsFor": "RELATED DOCUMENTS FOR ",
   "global.nacdMember": "NACD Member",
   "settings.wrongUrl": "Wrong URL",
   "settings.rerenderToInventory": "You are not authorized to view this page. You will be automatically redirected to Inventory.",
