added market segments to edit form echo product

--- a/localization/en.json
+++ b/localization/en.json
@@ -2246,5 +2246,6 @@
   "addDocuments.addDocuments": "ADD DOCUMENTS",
   "wantedBoard.notify.noInventoryItems.Content": "You do not have any Inventory item matching the requested item to offer.",
   "global.enabled": "Enabled",
-  "global.selectTags": "Select tags"
+  "global.selectTags": "Select tags",
+  "global.marketSegments": "Market Segments"
 }
