--- a/localization/en.json
+++ b/localization/en.json
@@ -1678,6 +1678,7 @@
   "confirm.delete.operations.tag.title": "Delete",
   "confirm.delete.operations.tag.content": "Do you really want to delete tag?",
   "orders.detail": "Detail",
+  "orders.accountingDocuments": "Accounting Documents",
   "settings.addUser": "Add User",
   "settings.product.offerExists": "Product cannot be edited, as it already has ProductOffers linked to it.",
   "settings.associatedEchoProducts": "What is the Associated External Product that you would like to map to?",
@@ -2026,6 +2027,9 @@
   "order.related.issuedAt": "Document Date",
   "order.related.issuerCompanyName": "Issuer",
   "order.related.cfPriceTotal": "Total",
+  "order.related.download": "Download",
+  "order.related.replaceExisting": "Replace Existing",
+  "order.related.delete": "Delete",
   "order.payment.failed.description": "The payment for this order failed. Please select another payment account or cancel the order.",
   "order.reinitiateTransfer.dropdownPlaceholder": "-- select payment account --",
   "order.reinitiateTransfer.success.header": "Initiate Payment",
@@ -2153,6 +2157,7 @@
   "order.detail.documents.dropdown.all": "Select All",
   "order.detail.backToOrders": "Back to Orders",
   "order.detail.buyerCompanyEin": "Buyer Company EIN",
+  "order.detail.sellerCompanyEin": "Seller Company EIN",
   "settings.warehouse.certificates.message.title": "This state/province already has certificate documents uploaded",
   "settings.warehouse.certificates.message.content": "If you want to update the documents, you will replace all existing certificates for warehouses in this state.",
   "settings.warehouse.certificateIcon.header": "Certificate is attached and so will be visible anywhere",
