--- a/localization/en.json
+++ b/localization/en.json
@@ -1266,6 +1266,7 @@
   "cart.ownFreight": "Own Freight",
   "cart.externalNotes": "External Notes",
   "cart.shippingQuoteId": "Shipping Quote ID",
+  "cart.shipmentQuote.enter": "Enter Shipment Quote",
   "cart.summary": "SUMMARY",
   "cart.totalItems": "TOTAL ITEMS: {count}",
   "cart.weightLimitExceeded.header": "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
@@ -1312,6 +1313,7 @@
   "cart.billingInfo": "Billing Info",
   "cart.nothing": "Please, first select a shipping destination Warehouse or Delivery Address.",
   "cart.noShippingQuotes": "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
+  "cart.noShippingQuotes.processManually.title": "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
   "cart.noShippingQuotes.processManually": "It was not possible to retrieve any automated shipping quotes for you order. Your shipping quote might need to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
   "cart.carrier": "Carrier",
   "cart.cost": "Cost",
@@ -2044,9 +2046,12 @@
   "order.returnCarrier": "Return Carrier",
   "order.returnTrackingNumber": "Return Tracking Number",
   "order.preferredPickupDate": "Preferred pick-up date",
-  "order.pickupRemarks": "Pick-up remarks",
-  "order.deliveryRemarks": "Delivery remarks",
-  "order.shipperRefNo": "Shipper reference number",
+  "order.pickupRemarks": "Pick-up Remarks",
+  "order.pickupRemarks.enter": "Enter Pick-up Remarks",
+  "order.deliveryRemarks": "Delivery Remarks",
+  "order.deliveryRemarks.enter": "Enter Delivery Remarks",
+  "order.shipperRefNo": "Shipper Reference Number",
+  "order.shipperRefNo.enter": "Enter Shipper Reference Number",
   "order.weightLimitExceeded": "Your order weight exceeds weight limit for automatic shipping quotes. Your shipping quote need to be processed manually. If you wish to continue, click the 'Request Shipping Quote' button. Information about your order will be received by Echo team, who will send you an email with Quote Id.",
   "order.quoteReceived": "If you already received the shipping quote and agree, please type in the provided Quote Id and continue with shipping order.",
   "profile.myProfile": "My Profile",
