Changed "Units of Packaging" to "Packaging Types" in Admin

--- a/localization/en.json
+++ b/localization/en.json
@@ -42,7 +42,7 @@
   "admin.casProductAltNames": "CAS Product Alternative Names",
   "admin.company": "Company",
   "admin.unitOfMeasure": "Unit of Measure",
-  "admin.unitOfPackaging": "Unit of Packaging",
+  "admin.unitOfPackaging": "Packaging Types",
   "admin.manufacturer": "Manufacturer",
   "admin.grade": "Grade",
   "admin.form": "Form",
@@ -53,7 +53,7 @@
   "admin.searchCasProduct": "Search cas product by name or number ...",
   "admin.searchCompany": "Search company by name",
   "admin.searchUnitOfMeasure": "Search unit of measure by name or measure type",
-  "admin.searchUnitOfPackaging": "Search unit of packaging by name or measure type",
+  "admin.searchUnitOfPackaging": "Search packaging types by name or measure type",
   "admin.searchManufacturer": "Search manufacturer by name",
   "admin.searchGrade": "Search grade by name",
   "admin.searchForm": "Search form by name",
