--- a/localization/en.json
+++ b/localization/en.json
@@ -2260,5 +2260,8 @@
   "global.selectTags": "Select tags",
   "global.marketSegments": "Market Segments",
   "global.sellMarketSegments": "Sell Market Segments",
-  "global.buymMrketSegments": "Buy Market Segments"
+  "global.buymMrketSegments": "Buy Market Segments",
+  "cart.payment.terms.title": "Payment Terms Information",
+  "cart.payment.terms50.content": "This purchase has payment terms of {value}. Which means, once the order is accepted, {percentage} of the payment will be withdrawn from your account and 50% will be withdrawn {shipmentDate}.",
+  "cart.payment.terms100.content": "This purchase has payment terms of {percentage} down. Which means, once the order is accepted, the entire payment will be withdrawn from your account."
 }
