--- a/localization/en.json
+++ b/localization/en.json
@@ -685,6 +685,7 @@
   "global.tags": "Tags",
   "global.buy": "Buy",
   "global.price": "Price",
+  "global.companyLogo": "Company Logo",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -751,6 +752,12 @@
   "company.duns": "D‑U‑N‑S Number",
   "company.purchaseHazmatEligible": "Purchase Hazardous Materials",
   "company.associationMembership": "Association Membership",
+  "company.logoDescription": "This is how your logo looks on the Web Portal",
+  "company.logoHintRow1": "Minimum resolution 100 x 50 px in transparent PNG",
+  "company.logoHintRow2": "Use the logo color that matches with dark backgrounds",
+  "company.logoButtonDelete": "Delete",
+  "company.logoButtonUpload": "Upload",
+  "company.logoButtonChange": "Change",
   "confirm.editOrAddNew.header": "Edit or add New",
   "confirm.editOrAddNew.content": "If you like to continue editing this product offer by adding documents, price tiers, or price book rules, click Edit. If you would like to add a new Inventory Item, click New.",
   "confirm.deleteNmfcNumber.header": "Delete NMFC Number",
