--- a/localization/en.json
+++ b/localization/en.json
@@ -5,6 +5,25 @@
   "agree.withTOS.content": "It appears you have not agreed with our {tos}. If you with to continue, please, read the updated {tos} and related documents, check the checkbox to confirm your agreement with those and click Continue button. You can also leave now by clicking Logout button.",
   "agree.withTOS.companyAdmin": "For US residents only. By checking this box, you agree to {echosTermsOfService}, {echosTermsOfUse} and {echosPrivacyPolicy}, as well as {dwollasTermsOfService} and {dwollasPrivacyPolicy}. You also certify that you are authorized to act on the behalf of your company.",
   "agree.withTOS.nonCompanyAdmin": "For US residents only. By checking this box, you agree to {echosTermsOfService}, {echosTermsOfUse} and {echosPrivacyPolicy}.",
+  "alerts.title": "Notifications",
+  "alerts.menu.application": "Application",
+  "alerts.menu.inventory": "Inventory",
+  "alerts.menu.purchase_orders": "Purchase Orders",
+  "alerts.menu.sales_orders": "Sales Orders",
+  "alerts.menu.wanted_board_offers": "Wanted Board Offers",
+  "alerts.menu.wanted_board_requests": "Wanted Board Requests",
+  "alerts.menu.wanted_board_matches": "Wanted Board Matches",
+  "alerts.menu.users": "Users",
+  "alerts.searchNotification": "Search Notification...",
+  "alerts.button.all": "All",
+  "alerts.button.read": "Read",
+  "alerts.button.unread": "Unread",
+  "alerts.column.notifications": "Notifications",
+  "alerts.column.readStatus": "Read Status",
+  "alerts.column.timeCreated": "Time Created",
+  "alerts.column.timeRead": "Time Read",
+  "alerts.status.read": "Read",
+  "alerts.status.unread": "Unread",
   "auth.resetMyPassword": "Password Reset",
   "auth.cancelPasswordReset": "Cancel Password Reset",
   "auth.username": "Username",
@@ -126,6 +145,7 @@
   "navigation.tags": "Tags",
   "navigation.company-product-catalog": "Company Product Catalog",
   "navigation.company-inventory": "Company Inventory",
+  "navigation.alerts": "Notifications",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
   "dwolla.paymentPoweredBy": "Echo Global Chemical Exchange payment gateway is powered by:",
   "dwolla.confirmAcc": "Confirm Account Administrator Information",
