--- a/localization/en.json
+++ b/localization/en.json
@@ -404,6 +404,7 @@
   "global.logout": "Logout",
   "global.addNew": "Add New",
   "global.name": "Name",
+  "global.customName": "Custom Name",
   "global.addressName": "Address Name",
   "global.nameAbbreviation": "Name Abbreviation",
   "global.measureType": "Measure Type",
@@ -705,6 +706,9 @@
   "global.tags": "Tags",
   "global.buy": "Buy",
   "global.price": "Price",
+  "global.expDate": "Expiration Date",
+  "global.issuedDate": "Issued Date",
+  "global.issuer": "Issuer",
   "global.companyLogo": "Company Logo",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
