#33981 Added 'Published', 'Status' columns to Admin / Product Catalog and Settings / Product Catalog.

--- a/localization/en.json
+++ b/localization/en.json
@@ -442,6 +442,9 @@
   "global.websiteUrl": "Website URL",
   "global.postalCode": "Postal Code",
   "global.state": "State",
+  "global.status": "Status",
+  "global.unmapped": "unmapped",
+  "global.notPublished": "This echo product is not published and will not show on the Marketplace.",
   "global.country": "Country",
   "global.province": "Province",
   "global.stateProvince": "State/Province",
@@ -1487,6 +1490,14 @@
   "productCatalog.editProduct": "Edited Product",
   "productCatalog.successfullyCreated": "Product {productName} successfully created.",
   "productCatalog.successfullyUpdated": "Product {productName} successfully updated.",
+  "productCatalog.enterProductName": "Enter Product Name",
+  "productCatalog.enterProductCode": "Enter Product Code",
+  "productCatalog.selectUnit": "Select Unit",
+  "productCatalog.selectType": "Select Type",
+  "productCatalog.selectWeightUnit": "Select Weight Unit",
+  "productCatalog.selectNmfcCode": "Select NMFC Code",
+  "productCatalog.enterInciName": "Enter INCI Name",
+  "productCatalog.selectFreightClass": "Select Freight Class",
   "notifications.systemSettingsUpdated.header": "System settings updated",
   "notifications.systemSettingsUpdated.content": "System settings successfully updated",
   "notifications.userCreated.content": "User {name} successfully created.",
