#33981 Updated 'Unmapped' product status in My Inventory and Settings / Product Catalog datagrids.

--- a/localization/en.json
+++ b/localization/en.json
@@ -917,6 +917,7 @@
   "myInventory.broadcasting.inactive": "Not Broadcasting now, switch on to start broadcasting.",
   "myInventory.broadcasting.incomplete": "Incomplete, please enter all required values first.",
   "myInventory.broadcasting.unmapped": "Unmapped, please make sure related Product is mapped first.",
+  "myInventory.broadcasting.unpublished": "Unpublished, please make sure related Product is published first.",
   "myInventory.broadcasting.notAvailable": "Status is not available",
   "myInventory.broadcasting.noSellEligible": "Your company is not eligible for broadcasting yet. Make sure to finalize your set-up.",
   "myInventory.broadcasting.validityExpired": "This product offer validity date has expired, so it cannot be broadcasted.",
@@ -937,6 +938,7 @@
   "myInventory.searchByProductName": "Search by product name...",
   "myInventory.editPricing": "Edit Pricing",
   "myInventory.andAbove": "and above",
+  "myInventory.productStatus.unmapped": "This Product Offer's Company Product is not mapped to Echo Product, so it will not be visible to other users at Marketplace.",
   "filter.warehouse": "Warehouse",
   "filter.incomplete": "Incomplete",
   "filter.chemicalProductName": "Chemical / Product Name",
@@ -1738,6 +1740,7 @@
   "orders.accountingDocuments": "Accounting Documents",
   "settings.addUser": "Add User",
   "settings.product.offerExists": "Product cannot be edited, as it already has ProductOffers linked to it.",
+  "settings.product.unmapped": "This product is not mapped and will not show on the Marketplace.",
   "settings.associatedEchoProducts": "What is the Associated External Product that you would like to map to?",
   "settings.system.allDisabled": "There is nothing to save as none of the values can be changed.",
   "settings.onlyLastFourNumbers": "Enter only last four digits",
