#34030 Settings - Add/Edit Warehouse/Branch sidebars update, placeholder texts, validation. (fixed merge conflicts)

--- a/localization/en.json
+++ b/localization/en.json
@@ -723,6 +723,11 @@
   "global.issuedDate": "Issued Date",
   "global.issuer": "Issuer",
   "global.companyLogo": "Company Logo",
+  "global.address.enterStreet": "Enter Street",
+  "global.address.selectCountry": "Select Country",
+  "global.address.selectStateProvince": "Select State/Province",
+  "global.address.selectCity": "Select City",
+  "global.address.enterZip": "Enter Zip",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -1462,6 +1467,7 @@
   "validation.shipmentQuoteId": "Value should be in format \"12365-4789\"",
   "validation.minOneRole": "At least one role should be selected",
   "validation.trailingSpaces": "Space was detected as leading or trailing character, please check enter password is correct",
+  "validation.invalidTime": "Invalid time",
   "password.change": "Change Password",
   "password.current": "Current Password",
   "password.new": "New Password",
@@ -1864,6 +1870,12 @@
   "settings.tables.logistics.buttonAdd": "Add Logistics",
   "settings.tables.logistics.search": "Search logistics ...",
   "settings.tables.documents.buttonAdd": "Add Document",
+  "settings.branches.enterBranch": "Enter Branch Name",
+  "settings.warehouses.enterWarehouseName": "Enter Warehouse Name",
+  "settings.warehouses.enterContactName": "Enter Contact Name",
+  "settings.warehouses.enterEmailAddress": "Enter Email Address",
+  "settings.warehouses.enterTaxId": "Enter Tax ID",
+  "settings.warehouses.writeDeliveryNotesHere": "Write Delivery Notes Here",
   "related.documents.addDocument": "Add Document",
   "order.related.documents.add": "ADD DOCUMENTS",
   "related.documents.documentType": "Document Type",
