adjust echo product to company generic product

--- a/localization/en.json
+++ b/localization/en.json
@@ -92,6 +92,7 @@
   "admin.user": "User",
   "admin.searchUser": "Search user ...",
   "admin.createWarehouseWith": "Create Warehouse with same parameters",
+  "admin.deleteCompanyGenericProduct": "Delete Company Generic Product",
   "broadcast.byRegion": "By Region",
   "broadcast.byCompany": "By Company",
   "broadcast.controls": "Broadcast Controls",
@@ -852,8 +853,8 @@
   "confirm.cancelPayment.content": "Do you really want to Cancel Payment for Order #{orderId}",
   "confirm.broadcast.unsavedChanges.header": "Unsaved changes",
   "confirm.broadcast.unsavedChanges.content": "You have unsaved broadcast rules changes. Do you wish to save them?",
-  "confirm.deleteEchoProduct.title": "Delete Echo Product?",
-  "confirm.deleteEchoProduct.content": "Do you really want to delete {name} echo product?",
+  "confirm.deleteCompanyGenericProduct.title": "Delete Company Generic Product?",
+  "confirm.deleteCompanyGenericProduct.content": "Do you really want to delete {name} company generic product?",
   "confirm.global.unsavedChanges.header": "Unsaved changes",
   "confirm.global.unsavedChanges.content": "You have unsaved changes. Do you wish to save them?",
   "confirm.markOrderAsShipped.title": "Mark Order as Shipped?",
@@ -2342,7 +2343,7 @@
   "cart.payment.terms100.content": "This purchase has payment terms of {percentage} down. Which means, once the order is accepted, the entire payment will be withdrawn from your account.",
   "companies.title": "Companies",
   "products.productCatalog.search": "Search by Product Name or Code",
-  "products.productCatalog.buttonAdd": "Add Echo Product",
+  "products.productCatalog.buttonAdd": "Add Company Generic Product",
   "products.casProducts.search": "Search cas product by name or number ...",
   "products.casProducts.buttonAdd": "Add CAS Product",
   "documentTypes.title": "Document Types",
