--- a/localization/en.json
+++ b/localization/en.json
@@ -1709,6 +1709,7 @@
   "marketplace.shippingQuoteTooltip": "Select one or more Product Offers to calculate a Shipping Quote. Multiple ProductOffers can be choosed only if they are at the same Location.",
   "marketplace.multipleEchoProduct": "Please, only select inventory for the same product to get a Shipping Quote",
   "marketplace.notes": "Notes",
+  "marketplace.info": "Info",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
   "operations.tables.shippingQuotes.search": "Search shipping quote by TBD",
