renamed echoProduct to companyGenericProduct

--- a/localization/en.json
+++ b/localization/en.json
@@ -83,9 +83,9 @@
   "admin.searchAssociations": "Search Associations",
   "admin.searchMarketSegment": "Search market segment by name",
   "admin.searchEchoProduct": "Search by Product Name or Code",
-  "admin.echoProducts.sds": "SDS",
-  "admin.echoProducts.sdsVersion": "SDS Version",
-  "admin.echoProducts.sdsRevisionDate": "SDS Revision Date",
+  "admin.companyGenericProduct.sds": "SDS",
+  "admin.companyGenericProduct.sdsVersion": "SDS Version",
+  "admin.companyGenericProduct.sdsRevisionDate": "SDS Revision Date",
   "admin.proprietary": "Proprietary",
   "admin.sds.versionNumber": "SDS Version Number",
   "admin.sds.revisionDate": "SDS Revision Date",
@@ -1751,7 +1751,7 @@
   "settings.addUser": "Add User",
   "settings.product.offerExists": "Product cannot be edited, as it already has ProductOffers linked to it.",
   "settings.product.unmapped": "This product is not mapped and will not show on the Marketplace.",
-  "settings.associatedEchoProducts": "What is the Associated External Product that you would like to map to?",
+  "settings.associatedCompanyGenericProduct": "What is the Associated External Product that you would like to map to?",
   "settings.system.allDisabled": "There is nothing to save as none of the values can be changed.",
   "settings.onlyLastFourNumbers": "Enter only last four digits",
   "settings.user.enabled": "User enabled",
