--- a/localization/en.json
+++ b/localization/en.json
@@ -252,7 +252,7 @@
   "global.placeholder.deliveryNotes": "Write delivery notes here...",
   "global.from": "From",
   "global.company": "Company",
-  "global.clientCompany": "Client Company",
+  "global.clientCompany": "Guest Company",
   "global.associations": "Associations",
   "global.discard": "Discard",
   "global.override": "Override",
@@ -1845,7 +1845,7 @@
   "settings.addLogistics": "Add Logistics",
   "settings.tables.users.buttonAdd": "Add User",
   "settings.tables.users.search": "Search user by name, title or branch ...",
-  "settings.tables.clientCompanies.buttonAdd": "Add Client Company",
+  "settings.tables.clientCompanies.buttonAdd": "Add Guest Company",
   "settings.tables.clientCompanies.search": "Search Client Companies",
   "settings.tables.branches.buttonAdd": "Add Branch",
   "settings.tables.branches.search": "Search branch by name, address or contact ...",
@@ -2351,6 +2351,6 @@
   "documentTypes.title": "Document Types",
   "marketSegments.title": "Market Segments",
   "adminSettings.title": "Admin Settings",
-  "confirm.deleteClientCompany": "Delete Client Company",
+  "confirm.deleteClientCompany": "Delete Guest Company",
   "import.CSVwithoutHeader": "CSV without header (Column Name)?"
 }
